@@ -1,8 +1,6 @@
 /**
  */
-//https://cdn.rawgit.com/Nektro/WebUtils/aaec817
 //
-export * from "https://cdn.rawgit.com/Nektro/WebUtils/aaec817/src/module/Pencil.js";
-export * from "https://cdn.rawgit.com/Nektro/WebUtils/aaec817/src/module/geometry.js";
-export * from "https://cdn.rawgit.com/Nektro/WebUtils/aaec817/src/module/Loop.js";
-export * from "https://cdn.rawgit.com/Nektro/WebUtils/aaec817/src/module/array_to_object.js";
+export * from "https://nektro.github.io/basalt/src/pencil.js";
+export * from "https://nektro.github.io/basalt/src/geometry.js";
+export * from "https://nektro.github.io/basalt/src/loop.js";
