@@ -3,6 +3,7 @@ CAT HOP CHANGELOG
 0.6.1:
     Meghan:
         refactor to adhere to eslint
+        refactor to use nektro/basalt instead of nektro/WebUtils
 0.6:
     Sean:
         add Skater & Scooter cat
